third_party/rust/chromium_crates_io/vendor/cxx-1.0.135/tests/ui/reserved_lifetime.stderr
error[E0262]: invalid lifetime parameter name: `'static`
 --> tests/ui/reserved_lifetime.rs:6:19
  |
6 |         fn logger<'static>() -> Pin<&'static Logger>;
  |                   ^^^^^^^ 'static is a reserved lifetime name
